# image-messie-rust

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: exif.rs  main.rs  models.rs  organizer.rs  scanner.rs  ui.rs
