[package]
name = "image-messie"
version = "0.1.0"
edition = "2021"
description = "Image Messie - Organize messy image collections by EXIF date and camera model"
license = "MIT"
keywords = ["image", "exif", "organizer", "cli", "photos"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "messie"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
kamadak-exif = "0.5"
ratatui = "0.30"
crossterm = "0.29"
chrono = "0.4"
anyhow = "1.0"
owo-colors = "4.1"
